--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/react-transition-group": "^4.4.0",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^1.3.1",
     "react": "^16.13.1",
