--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "react-helmet": "^6.0.0",
     "react-instagram-embed": "^1.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-spring": "^8.0.27"
-  },
+    "react-scripts": "3.4.1"  
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
